Prueba completa. Se añade opciones de entrada:  t             => UnitaryTest  f=<file>  => Commands from file g             => Game q             => Quit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,10 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/YellowstoneDrones.dll",
-            "args": "t",
+            "args": "f=/home/touzas/NetCore/YellowstoneDrones/commands.txt",
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
