Corrección de un error a la hora de arrancar No se estaba controlando la no entrada de args

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/YellowstoneDrones.dll",
-            "args": "f=/home/touzas/NetCore/YellowstoneDrones/commands.txt",
+            //"args": "t",
+            //"args": "f=YellowstoneDrones/commands.txt",
+            //"args": "g",
+            "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "integratedTerminal",
